--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.14.7",
     "rxjs": "~6.4.0",
+    "serialize-javascript": "^2.1.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.8",
-    "@angular/cli": "^8.3.8",
+    "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "~8.1.1",
     "@angular/language-service": "~8.1.1",
     "@types/jasmine": "~3.3.8",
